--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10459,20 +10459,30 @@ section.welcome #particles-js {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
+  font-family: "Space Mono", monospace;
+  font-size: 10vw;
 }
 
 .welcome-container h3 {
-  font-size: 50px;
-  margin-bottom: 50px;
-  font-weight: 600;
+  font-size: 5vw;
+  letter-spacing: 1px;
+  margin-top: 4em;
+  margin-bottom: 20px;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .welcome-container .js-hidden-text {
   display: none;
-}
-
-.welcome-container .js-show-text {
-  height: 60px;
 }
 
 .welcome-container .js-show-text-hover {
@@ -10487,7 +10497,7 @@ section.welcome #particles-js {
   font-size: 20px;
   text-align: center;
   height: 50px;
-  display: block;
+  display: none;
   line-height: 50px;
   padding: 0;
   text-decoration: none;
