navigation & navbar work...%

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #000;
+$body-bg: #121A21;
 
 // Typography
 $font-family-sans-serif: "Helvetica Neue","Helvetica","Arial",sans-serif;
