--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10512,8 +10512,11 @@ section.welcome #particles-js {
   background-position: 50% 50%;
 }
 
+#message-container {
+  height: 100vh;
+}
+
 .welcome-container {
-  height: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10535,7 +10538,6 @@ section.welcome #particles-js {
 .welcome-container h3 {
   font-size: 5vw;
   letter-spacing: 1px;
-  margin-top: 4em;
   margin-bottom: 20px;
   -webkit-touch-callout: none;
   /* iOS Safari */
