--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -28,9 +28,8 @@ section.welcome {
   }
 
 }
-
+#message-container { height: 100vh;}
 .welcome-container {
-  height: inherit;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -38,10 +37,10 @@ section.welcome {
   overflow: hidden;
   font-family: $font-family-space;
   font-size: 10vw;
+
   h3 {
     font-size: 5vw;
     letter-spacing: 1px;
-    margin-top: 4em;
     margin-bottom: 20px;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
